fix: ridotta dimensione immagini cibo per evitare overflow laterale

--- a/resources/sass/partials/_main.scss
+++ b/resources/sass/partials/_main.scss
@@ -134,6 +134,14 @@
                 }
             }
         }
+
+        .card-temp{
+            .inner-box{
+                img{  
+                    max-height: 110px;
+                }
+            }
+        }
     }
 }
 
